# hvor

./: .gitignore  LICENSE  README.md  geo_locator_norway.py  pyproject.toml  pytest.ini
.github/workflows/: build-publish.yml  python-app.yml
docs/source/: conf.py  hvor.rst  index.rst
hvor/: __init__.py  console.py  data.py  geo_locator_norway.py  geolocator.py  hvor.py  hvor_utils.py  utils.py
hvor/resources/: Fylker-2020-large.json.bz2  Kommuner-2020-large.json.bz2
iout_foss/: geo_locator_norway.py
tests/: test_geo_locator_norway.py  test_hvor.py
