[tool.poetry]
name = "hvor"
version = "0.2.0"
description = "A library for assigning Norwegian metadata to coordinates"
authors = ["Espen Hafstad Solvang, Erik Parmann, Kristian Flikka, Anna-Lena Both, Pål Grønås Drange"]
#license = "unknown :("
keywords = ["pandas", "dataframe", "geopandas"]
readme = "README.md"
repository = "https://github.com/bkkas/iout_foss"

include = ["CHANGELOG.md"]

[tool.poetry.scripts]
hvor = 'hvor.console:main'

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.9.0"
setuptools = "^57.4.0"
Rtree = "^0.9.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
pytest-black = "^0.3.12"
pytest-isort = "^2.0.0"
Sphinx = "^4.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
